--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.3.0",
