--- a/docs/_app/manifest.json
+++ b/docs/_app/manifest.json
@@ -1,34 +1,29 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-44e9efc6.js",
+    "file": "start-91784085.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-9fe72fd8.js",
-      "_index-92d65ea7.js",
-      "_singletons-d1fb5791.js"
+      "_index-82bdf09f.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
       ".svelte-kit/runtime/components/error.svelte",
-      "src/routes/about.svelte",
-      "src/routes/index.svelte",
-      "src/routes/todos/index.svelte"
+      "src/routes/index.svelte"
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-cc040118.js",
+    "file": "pages/__layout.svelte-88f68c4f.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-9fe72fd8.js"
+      "_index-82bdf09f.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-15681802.css"
+      "assets/pages/__layout.svelte-8700bd5b.css"
     ],
     "assets": [
-      "assets/svelte-logo-87df40b8.svg",
       "assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
       "assets/fira-mono-all-400-normal-1e3b098c.woff",
       "assets/fira-mono-cyrillic-400-normal-c7d433fd.woff2",
@@ -39,62 +34,27 @@
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-c8df2b3e.js",
+    "file": "error.svelte-ea5c849b.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-9fe72fd8.js"
-    ]
-  },
-  "src/routes/about.svelte": {
-    "file": "pages/about.svelte-20907a0b.js",
-    "src": "src/routes/about.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_index-9fe72fd8.js"
-    ],
-    "css": [
-      "assets/pages/about.svelte-bf4528fa.css"
+      "_index-82bdf09f.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-2d1d36cd.js",
+    "file": "pages/index.svelte-9e20873e.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-9fe72fd8.js",
-      "_index-92d65ea7.js"
+      "_index-82bdf09f.js"
     ],
     "css": [
-      "assets/pages/index.svelte-d0605c9c.css"
+      "assets/pages/index.svelte-19601700.css"
     ]
   },
-  "src/routes/todos/index.svelte": {
-    "file": "pages/todos/index.svelte-fd0531db.js",
-    "src": "src/routes/todos/index.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_index-9fe72fd8.js",
-      "_singletons-d1fb5791.js"
-    ],
-    "css": [
-      "assets/pages/todos/index.svelte-a910a02d.css"
-    ]
-  },
-  "_index-9fe72fd8.js": {
-    "file": "chunks/index-9fe72fd8.js"
-  },
-  "_index-92d65ea7.js": {
-    "file": "chunks/index-92d65ea7.js",
-    "imports": [
-      "_index-9fe72fd8.js"
-    ]
-  },
-  "_singletons-d1fb5791.js": {
-    "file": "chunks/singletons-d1fb5791.js"
+  "_index-82bdf09f.js": {
+    "file": "chunks/index-82bdf09f.js"
   }
 }
